--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #APIはだめと弾かれた
 /database/API_KEY/local-snow-429706-d4-e028ed82a83f.json
+/PDFcreator/flask_pdf/static/*.pdf 
 # original gitignore
 *.pptx
 *.idea.txt
